# src/api/propertyImages/domain/interface/propertyImages.repository.ts
@@ -5,6 +5,10 @@ import {
 
 export interface IPropertyImagesRepository {
   createImage(image: CreatePropertyImageModel): Promise<PropertyImage>;
+  getImageById(
+    propertyId: string,
+    imageId: string,
+  ): Promise<PropertyImage | undefined>;
 }
 
 export const PROPERTY_IMAGES_REPOSITORY = Symbol("PROPERTY_IMAGES_REPOSITORY");
